# ProtoFH

./: .gitignore  CONNECTIVITY.md  Dockerfile.dev  JNX_PLAN.md  JNX_PLAN2.md  JNX_PLAN3_PROPOSAL.md  Makefile  OPERATIONS.md  PROJECT_WRAPUP.md  README.md  RECOVERY.md  SESSION_SUMMARY.md  TARGET_VALIDATION.md  setup.cfg
bench/: bench_replay.py
cpp/: Makefile
cpp/common/: cfg.h  endian.h  log.h  minitest.h  procstat.h  time.h
cpp/db/: ingest.cpp  ingest.h  jnxdb_main.cpp  query.cpp  query.h  tables.cpp  tables.h
cpp/fh/: glimpse.cpp  glimpse.h  jnxfh_main.cpp  publish.cpp  publish.h  reactor.cpp  reactor.h  recover.cpp  recover.h  soupclient.cpp  soupclient.h
cpp/itch/: itch.cpp  itch.h
cpp/market/: levels.cpp  levels.h  market.cpp  market.h  orders.cpp  orders.h  refdata.cpp  refdata.h  tape.cpp  tape.h
cpp/soup/: soup.cpp  soup.h
cpp/test/: jsonvec.h  test_common.cpp  test_itch.cpp  test_market.cpp  test_query.cpp  test_record.cpp  (+4 more)
docs/: short_sell.md  wire_spec.md
etc/: jnxdb.cfg  jnxfh.cfg
jnxfeed/: __init__.py  __main__.py  glimpse.py  handler.py  itchfile.py  pcapio.py  types.py
jnxweb/: __init__.py  __main__.py  dbquery_client.py  httpd.py  mcast.py  records.py  snapshot.py  state.py  static_page.py  wsock.py
session_logs/: README.md  agentA-F0-F1-F2-F5.jsonl  agentB-vectors-F3-F4.jsonl  agentC-F6.jsonl  agentD-F7.jsonl  agentE-F8.jsonl  main-conversation.jsonl
tools/: bench.py  compare_db_dump.py  dbquery.py  gen_golden_vectors.py  make_dist.py  mcast_spy.py  proto_state_dump.py  py36check.py  run_asan_pipeline.py  run_e2e.py  ws_probe.py
(+67 files in other folders)
