[metadata]
name = jnxfeed
version = attr: jnxfeed.__version__
description = Japannext PTS ITCH market data feed handler prototype
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
zip_safe = False

[options.packages.find]
include = jnxfeed*

[tool:pytest]
testpaths = tests
